--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,7 @@ xlDocker {
   runPortMapping = '15516:5516'
 }
 
-if (!project.hasProperty('release.scope')) {
-  project.ext['release.scope'] = 'patch'
-}
-
-if (!project.hasProperty('release.useLastTag')) {
-  project.ext['release.useLastTag'] = true
-}
+version = '0.2.0'
 
 repositories {
   mavenLocal()
